# lob

./: .gitignore  CMakeLists.txt  README.md  __init__.py  conanfile.py  ipython_rwdi.bat  ipython_rwdi.sh  patch.txt  requirements.txt  setup_env.sh  test.py
itch-order-book/: build.sh  main.cpp  run.sh
lob/: CMakeLists.txt
lob/app/: CMakeLists.txt  ItchToLobType.h  PinToCore.h  Simulator.h  Strategies.h  StrategyDiagnostics.cpp  TupleMap.h  main.cpp
lob/lob/: CMakeLists.txt  RingBuffer.h  itch.h  itch_reader.cpp  itch_reader.h  lob.cpp  lob.h
lob/logger/: CMakeLists.txt  Logger.cpp  Logger.h
lob/md/: BinaryDataReader.h  CMakeLists.txt  MappedFile.cpp  MappedFile.h  Symbols.h  itch_reader.cpp  itch_reader.h  read_bytes.h
lob/md/itch/: ItchBinaryFileReader copy.cpp  MessageReaders.h  TypeConverterss.h  TypeFormatters.h  betoh.h  messages.h  read_bytes.h  types.h
lob/pymd/: CMakeLists.txt  Condition.cpp  Condition.h  ItchReader.cpp  ItchReader.h  pymd.cpp
lob/simulator/: CMakeLists.txt  ItchBooksManager.cpp  ItchBooksManager.h  OMS.h  PinToCore.h  Simulator.cpp  Simulator.h  Strategies.h  StrategyDiagnostics.h  functions.cpp  functions.h
lob/strategies/: CMakeLists.txt  Strategies.h  StrategyDiagnostics.cpp  StrategyDiagnostics.h
lob/tests/: CMakeLists.txt  LOBTests.cpp  lob.tests.cpp  md.tests.cpp
notebooks/: diagnostics.ipynb
python/: ipython_debug.bat  ipython_rwdi.bat  script.py
